Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.26 - unreleased

5.4.25 - Released 9-Oct-2007
	Rick Widmer, Tom Collins
	- another try at signedness warnings in maildirquota and vchkpw
	- minor change in README.vdelivermail


5.4.24 - Released 29-Sep-2007
	Rick Widmer, Tom Collins
	- fix off_t warnings in maildirquota.c when mysql back end is used.

	John Simpson, Joshua Megerman
	- extend maximum password length


5.4.23 - Released 23-Sep-2007
	Rick Widmer
	- Upgrade build system to match my dev server  (SuSE 10.2)
	- Revert maildirquota warnings change


5.4.22 - Released 15-Sep-2007
        Steve Cole
	- invalid MySQL info in UPGRADE

	Bill Shupp
	- Missing ERR defines in vpopmaild.msg
	- Fix help text for add_ip_map and del_ip_map in vpopmaild.c

	Rick Widmer
	- attack warnings in maildirquota by making some variables unsigned everywhere

        Steve Cole, Marcello Lupo, Japheth Cleaver,  Rick Widmer
	- segfault in vdeluser with MySQL back end.  Work around applied, and note
	added to TODO about making database valias return .qmail files if they exist
	which is the long term fix.


5.4.21 - Released 06-Sep-2007
	Joshua Megerman, Alessio Cecchi
	- fix bug in vpopmaild add_alias command


5.4.20 - Released 21-Aug-2007
	Bill Shupp/Rick Widmer
	- add show_error function to vpopmaild 

	Rick Widmer
	- Make vadduser check that domain exists and user does not exist
	  before prompting for password
	- Add TODO file to record stuff I don't want to forget
	- Add README.vdelivermail 
	- Add examples for delete and bounce-no-mailbox to help on vadddomain

	Remo Mattei
	- Change upgrade script to use pw_domain instead of domain in example code
	  to change domain name field lengths.

	John Simpson, Joshua Megerman, Adam Sloan
	- Fix bad exit if script exists but can not be executed
	- Fix missing onchange on delete of alias domain

	John Simpson